<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/etmosidpro"
        android:hint="@string/et_idprofesor"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/etmostipo"
        android:hint="@string/et_tipo"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/etmosfechi"
        android:hint="@string/et_fechai"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/etmosfechf"
        android:hint="@string/et_fechaf"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/etmoslugi"
        android:hint="@string/et_lugari"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/etmoslugf"
        android:hint="@string/et_lugarf"
        android:gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:id="@+id/scrollView2">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etmosdesc"
            android:layout_gravity="center_horizontal"
            android:hint="@string/et_descripcion"
            android:gravity="center" />
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_modificar"
            android:id="@+id/button3"
            android:onClick="btmodificar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_salir"
            android:id="@+id/button4" />
    </LinearLayout>
</LinearLayout>